--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -26,7 +26,6 @@
 
     .navigation {
         flex-direction: row;
-        background-color: #008C67;
         border-radius: 4px 4px 0 0;
     }
 
